# prime_sdk_rs

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  build.rs  run_example.sh
api_spec/: prime-public-api-spec.json
examples/: README.md  prime_client_example.rs
examples/activities/: get_activity.rs  get_portfolio_activity.rs  list_entity_activities.rs  list_portfolio_activities.rs
examples/address_book/: create_address_book_entry.rs  list_address_book.rs
examples/advanced_transfers/: cancel_advanced_transfer.rs  create_advanced_transfer.rs  get_portfolio_counterparty_id.rs  list_advanced_transfers.rs
examples/allocations/: create_allocation.rs  create_net_allocation.rs  get_allocation.rs  list_allocations_by_client_netting_id.rs  list_portfolio_allocations.rs
examples/assets/: list_entity_assets.rs
examples/balances/: get_wallet_balance.rs  list_entity_balances.rs  list_portfolio_balances.rs  list_web3_wallet_balances.rs
examples/commission/: get_portfolio_commission.rs
examples/financing/: create_new_locates.rs  get_buying_power.rs  get_cross_margin_overview.rs  get_cross_margin_prime_overview.rs  get_cross_margin_risk_parameters.rs  get_margin_information.rs  get_market_data.rs  get_post_trade_credit.rs  get_withdrawal_power.rs  list_existing_locates.rs  list_financing_eligible_assets.rs  list_interest_accruals.rs  list_locate_availabilities.rs  (+6 more)
scripts/: check_endpoint_coverage.py
src/: client.rs  constants.rs  credentials.rs  debug.rs  error.rs  generated_types.rs  lib.rs  types.rs
(+130 files in other folders)
