[package]
name = "prime_rs_sdk"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
build = "build.rs"

[dependencies]
core_rs = { path = "../core_rs" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
async-trait = "0.1"
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.17.0", features = ["v4"] }

[build-dependencies]
serde_json = "1"
regex = "1"
convert_case = "0.8.0"
