[package]
name = "prime_sdk_rs"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
build = "build.rs"
description = "A library to help call Coinbase Prime Api"
readme = "README.md"
repository = "https://github.com/coinbase-samples/prime_sdk_rs"
exclude = ["examples/"]

[dependencies]
core_rs = { path = "../core_rs" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
async-trait = "0.1"
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.17.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
serde_json = "1"
regex = "1"
convert_case = "0.8.0"
